# secure-c

./: README.md
clang/tools/secure-c/: CMakeLists.txt  NullScope.cpp  NullScope.h  SecureC.cpp  SecureC.h  SecureCStatistics.cpp  SecureCStatistics.h  secure_c.h
clang/tools/secure-c/tests/: array_indexing.c  array_indexing_err.c  assign_indir_nullable.c  assign_nonnull.c  assign_nullable.c  call.c  call_error.c  cast.c  cast_access.c  cast_error.c  cast_parens.c  cast_struct_type.c  const_size_array.c  deref_nonnull.c  deref_nullable.c  deref_nullable_checked.c  extern.c  field_access.c  func_ptr.c  func_ptr_assign_err.c  func_ptr_error.c  goto_check.c  goto_initialization.c  initial_value.c  initial_value_error.c  loop_null_check.c  macro.c  macro_arg.c  macro_body.c  macro_overlap.c  member_call.c  member_call_error.c  member_nonnull.c  member_null_check.c  member_nullable.c  memcpy_1.c  memcpy_2.c  memcpy_null_err.c  memset_null_err.c  multi_if_return.c  (+68 more)
clang/tools/securify/: CMakeLists.txt  Securify.cpp  known_symbols.h
clang/tools/securify/tests/: annotated.c  assert-simple.c  assert.c  assign_nonnull.c  assign_null.c  cast_access.c  cg_order.c  cg_order_split.h  cg_order_split1.c  cg_order_split2.c  deref-simple.c  deref.c  func_ptr.c  init-simple.c  init_then_check.c  init_with_addrof.c  init_with_array.c  init_with_nonnull.c  init_with_null.c  init_with_nullable.c  init_with_string_literal.c  member-simple.c  member.c  nonnull-param.c  nonnull_assign.c  nonnull_param.c  nonnull_param_checked.c  nullable-param.c  nullcheck-simple.c  nullcheck_eq.c  test.sh  (+4 more)
(+97 files in other folders)
